@@ -95,7 +95,10 @@ V1.7 2015-12-xx in preparation
       --report-stderr
       --abstract-interpreter
       --update-input-var
+      --post-collapse-stg
+      --attach-pointer-expr-lists
+      --annotate results
   * removed solvers 1,2,3,4,6,7.
-
+  * added command line option --annotate-terms
   * bugfixes:
     [in preparation]
